[package]
name = "publish"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
bitflags = "2.9.3"
thiserror = "2.0.16"
tokio = "1.47.1"

[dev-dependencies]
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
