[package]
name = "copenpublish"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "openpublish"
crate-type = ["staticlib", "cdylib", "lib"]

# [profile.release]
# panic = "abort"

# [profile.dev]
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_openpublish = { path = "../../", package = "openpublish" }
bitflags = "2.9.3"
libc = "0.2.175"
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["rt"] }

[build-dependencies]
cbindgen = "0.29.0"

[dev-dependencies]
lazy_static = "1.5.0"
proptest = "1.7.0"
