[package]
name = "pyopenpublish"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "openpublish"

[dependencies]
async-trait = "0.1.89"
base_openpublish = { package = "openpublish", path = "../../" }
pyo3 = "0.26.0"
pyo3-async-runtimes = { version = "0.26.0", features = ["tokio-runtime"] }

