[project]
name = "openpublish"
description = "A simple pubilsh framework"
readme = "README.md"
requires-python = "~=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Scott Wilson", email = "scott@propersquid.com" }]
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dependencies = ["typing-extensions ~= 4.15"]
dynamic = ["version"]

[project.optional-dependencies]
build = ["maturin ~= 1.9"]
docs = ["myst-parser ~= 4.0", "sphinx ~= 8.2", "sphinx-rtd-theme ~= 3.0"]
test = [
  "hypothesis ~= 6.138",
  "pytest ~= 8.4",
  "pytest-asyncio ~= 1.2",
  "pytest-cov ~= 7.0",
  "pytest-xdist ~= 3.8",
  "ruff ~= 0.13",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.mypy]
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
# Getting these passing should be easy
strict_equality = true
strict_concatenate = true
# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true
# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true
# This one can be tricky to get passing if you use a lot of untyped libraries
warn_return_any = true

[tool.ruff]
lint.select = ["ALL"]
line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

